# fastapi-app

./: pyproject.toml
.devcontainer/: devcontainer.json
saas_app/: main.py
saas_app/router/: websocket.py
saas_app/schema/: item.py
saas_app/service/: websocket.py
tests/: benchmark.py
tests/http/: main.http
tests/unit/: test_websocket.py
