[tool.poetry]
name = "saas_app"
version = "0.1.0"
description = ""
authors = ["Rahavendran Mohandass <46070934+vijayragava@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
